--- a/app/src/main/res/layout/app_card.xml
+++ b/app/src/main/res/layout/app_card.xml
@@ -32,8 +32,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_weight=".1"
-        android:src="@android:drawable/stat_sys_data_bluetooth"
-        android:tint="@android:color/black" />
+        android:src="@drawable/mobile_on" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/wifi"
@@ -42,6 +41,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:layout_weight=".1"
-        android:src="@android:drawable/btn_dialog" />
+        android:src="@drawable/wifi_on" />
 
 </LinearLayout>
