--- a/app/src/main/res/layout/fragment_app_internet_access.xml
+++ b/app/src/main/res/layout/fragment_app_internet_access.xml
@@ -10,4 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Base.Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
 </FrameLayout>
